--- a/app/src/main/res/layout/activity_sura_content.xml
+++ b/app/src/main/res/layout/activity_sura_content.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
+    style="@style/mainActivityStyle"
+    android:layoutDirection="rtl"
+
     tools:context=".quran.quranContent.SuraContentActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -15,12 +17,13 @@
         app:liftOnScrollColor="@color/transparent">
 
         <com.google.android.material.appbar.MaterialToolbar
+            style="@style/toolbarStyle"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:navigationIcon="@drawable/ic_back">
+            android:layout_height="match_parent">
 
             <TextView
+                style="@style/TextViewStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -37,15 +40,16 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <ImageView
+            style="@style/contentBackgroundStyle"
             android:id="@+id/white_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="50dp"
-            android:paddingBottom="20dp"
-            android:src="@drawable/white_background" />
+            android:paddingBottom="20dp" />
 
         <TextView
+            style="@style/TextViewStyle"
             android:id="@+id/sura_name_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
