--- a/app/src/main/res/layout/fragment_hadeth.xml
+++ b/app/src/main/res/layout/fragment_hadeth.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="rtl"
+
     tools:context=".hadeth.HadethFragment">
 
     <ImageView
@@ -26,6 +28,7 @@
         app:layout_constraintTop_toBottomOf="@id/quran_image" />
 
     <TextView
+        style="@style/TextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/jf_flat_regular"
