--- a/app/src/main/res/layout/fragment_sebha.xml
+++ b/app/src/main/res/layout/fragment_sebha.xml
@@ -5,54 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
+    android:layoutDirection="rtl"
+
     tools:context=".sebha.SebhaFragment">
 
     <ImageView
+        style="@style/sebhaHeadImgStyle"
         android:id="@+id/seb7a_head_img"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
         android:adjustViewBounds="true"
+        android:layout_marginEnd="30dp"
         android:paddingVertical="20dp"
-        android:src="@drawable/seb7a_head"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        style="@style/sebhaBodyImgStyle"
         android:id="@+id/seb7a_body_img"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="95dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/seb7a_body"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/seb7a_head_img" />
 
     <TextView
+        style="@style/TextViewStyle"
         android:id="@+id/tasbeh_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/jf_flat_regular"
         android:text="عدد التسبيحات"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/seb7a_body_img" />
 
     <TextView
+        style="@style/sebhaCounterStyle"
         android:id="@+id/sebha_counter_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/sebha_bg"
         android:textStyle="bold"
         android:padding="16dp"
         android:text="0"
-        android:textColor="#CC000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,15 +62,16 @@
 
     <TextView
         android:id="@+id/sebha_zekr_tv"
+        style="@style/sebhaZekrStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/sebha_zekr_bg"
         android:fontFamily="@font/elmessiri_semi_bold"
         android:padding="16dp"
         android:text="سبحان الله"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        android:layout_marginBottom="60dp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sebha_counter_tv" />
