--- a/app/src/main/res/layout/item_hadeth_content.xml
+++ b/app/src/main/res/layout/item_hadeth_content.xml
@@ -2,17 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layoutDirection="rtl"
+
     android:layout_height="wrap_content">
 
     <TextView
+        style="@style/contentTextColor"
         android:id="@+id/hadeth_tv"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:fontFamily="@font/elmessiri_semi_bold"
+        android:fontFamily="@font/dthuluth"
         android:padding="4dp"
         android:gravity="center"
         android:text="قال رسول الله صلي الله عليه وسلم"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
