--- a/app/src/main/res/layout/item_sura_name.xml
+++ b/app/src/main/res/layout/item_sura_name.xml
@@ -3,16 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layoutDirection="rtl"
+
     android:paddingVertical="8dp">
 
     <TextView
+        style="@style/TextViewStyle"
         android:id="@+id/sura_number_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/jf_flat_regular"
         android:gravity="center"
         android:text="1"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,13 +23,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        style="@style/TextViewStyle"
         android:id="@+id/sura_name_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/jf_flat_regular"
         android:gravity="center"
         android:text="البقرة"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sura_number_tv"
