--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorPrimaryVariant">#866942</color>
     <color name="colorPrimaryDark">#141A2E</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="colorOnPrimaryDark">#FACC1D</color>
+    <color name="colorOnPrimaryVariantDark">#F8F8F8</color>
 </resources>
